[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
dekunobou = { path = "src/dekunobou" }
actix-web = "4"
actix-cors = "0.7"
actix-files = "0.6"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "macros"] }
env_logger = "0.11"
log = "0.4"